// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ModalError No content found 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 5,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#FFFFFF",
          "height": 64,
          "justifyContent": "center",
          "paddingHorizontal": 32,
        },
        Object {
          "backgroundColor": "#FDE2E5",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 24,
          },
          false,
          false,
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 16,
            "left": 16,
            "right": 16,
            "top": 16,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="close-modal"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          color={4283723386}
          focusable={false}
          height={16}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          tintColor={4283723386}
          vbHeight={24}
          vbWidth={24}
          width={16}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M21.456 5.414l-2.829-2.828-6.585 6.586-6.586-6.586-2.829 2.828L9.213 12l-6.586 6.586 2.829 2.828 6.586-6.586 6.585 6.586 2.829-2.828L14.87 12z"
              fill={4283723386}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 1000,
        "marginTop": -48,
        "padding": 5,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 1000,
            "justifyContent": "center",
            "padding": 16,
          },
          Object {
            "backgroundColor": "#F73F52",
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={50}
        bbWidth={50}
        color={4294967295}
        focusable={false}
        height={50}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginLeft": 5,
            },
            Object {
              "flex": 0,
              "height": 50,
              "width": 50,
            },
          ]
        }
        tintColor={4294967295}
        vbHeight={24}
        vbWidth={24}
        width={50}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0-.001h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M23 6h-5l-5 6h3l-3 5 9-7h-4zM8 12l2-1 3 6zM15.977 6.477l-.859-3.907a2.003 2.003 0 00-2.383-1.522L2.967 3.196a1.995 1.995 0 00-1.255.876 1.987 1.987 0 00-.268 1.507l1.504 6.837 1.953-.43-.645-2.93 11.721-2.579zM13.164 3l.43 1.953-9.767 2.15-.43-1.954L13.164 3z"
            fill={4294967295}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M15 16v2H5v-4H3v8c0 1.104.897 2 2 2h10c1.103 0 2-.896 2-2v-6h-2zM5 22v-2h10v2H5z"
            fill={4294967295}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "paddingBottom": 32,
          "paddingHorizontal": 32,
        },
        Object {
          "paddingTop": 32,
        },
        Object {
          "paddingTop": 16,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {},
          Array [
            Object {
              "fontWeight": "700",
            },
            Object {
              "color": "#546E7A",
              "fontSize": 17,
              "textAlign": "center",
            },
          ],
        ]
      }
    >
      The app has been disabled for your platform
    </Text>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <Text
      style={
        Array [
          Object {},
          Object {
            "color": "#546E7A",
            "fontSize": 17,
            "textAlign": "center",
          },
        ]
      }
    >
      if you want to reactivate it, contact your manager or click on the link below and we will pass the message on
    </Text>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <View
        testID="button-retry-action"
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#00B0FF",
              "borderRadius": 32,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "center",
              "marginBottom": 0,
              "opacity": 1,
              "paddingHorizontal": 24,
            }
          }
          testID="button-retry-action-native"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots ModalError Platform not activated 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 5,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#FFFFFF",
          "height": 64,
          "justifyContent": "center",
          "paddingHorizontal": 32,
        },
        Object {
          "backgroundColor": "#FDE2E5",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 24,
          },
          false,
          false,
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 16,
            "left": 16,
            "right": 16,
            "top": 16,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="close-modal"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          color={4283723386}
          focusable={false}
          height={16}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          tintColor={4283723386}
          vbHeight={24}
          vbWidth={24}
          width={16}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M21.456 5.414l-2.829-2.828-6.585 6.586-6.586-6.586-2.829 2.828L9.213 12l-6.586 6.586 2.829 2.828 6.586-6.586 6.585 6.586 2.829-2.828L14.87 12z"
              fill={4283723386}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 1000,
        "marginTop": -48,
        "padding": 5,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 1000,
            "justifyContent": "center",
            "padding": 16,
          },
          Object {
            "backgroundColor": "#F73F52",
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={50}
        bbWidth={50}
        color={4294967295}
        focusable={false}
        height={50}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "marginLeft": 5,
            },
            Object {
              "flex": 0,
              "height": 50,
              "width": 50,
            },
          ]
        }
        tintColor={4294967295}
        vbHeight={24}
        vbWidth={24}
        width={50}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M0 0h24v24H0z"
            fill={null}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGGroup
            fill={4294967295}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M19.707 9.706l-1.414-1.414L16 10.585l-2.293-2.293-1.414 1.414 2.293 2.293-2.293 2.293 1.414 1.414L16 13.413l2.293 2.293 1.414-1.414-2.293-2.293z"
            />
            <RNSVGPath
              d="M6 15.999v-8h10v-4c0-1.104-.897-2-2-2H6c-1.103 0-2 .896-2 2v16c0 1.104.897 2 2 2h8c1.103 0 2-.896 2-2v-4H6zm8-12v2H6v-2h8zm-8 16v-2h8v2H6z"
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "paddingBottom": 32,
          "paddingHorizontal": 32,
        },
        Object {
          "paddingTop": 32,
        },
        Object {
          "paddingTop": 16,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {},
          Array [
            Object {
              "fontWeight": "700",
            },
            Object {
              "color": "#546E7A",
              "fontSize": 17,
              "textAlign": "center",
            },
          ],
        ]
      }
    >
      The app has been disabled for your platform
    </Text>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <Text
      style={
        Array [
          Object {},
          Object {
            "color": "#546E7A",
            "fontSize": 17,
            "textAlign": "center",
          },
        ]
      }
    >
      if you want to reactivate it, contact your manager or click on the link below and we will pass the message on
    </Text>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <View
        testID="button-retry-action"
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#00B0FF",
              "borderRadius": 32,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "center",
              "marginBottom": 0,
              "opacity": 1,
              "paddingHorizontal": 24,
            }
          }
          testID="button-retry-action-native"
        >
          <Text
            style={
              Array [
                Object {},
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 17,
                  "fontWeight": "700",
                },
              ]
            }
          >
            I want it !
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
